--- a/Home Work/hw2-2cs.css
+++ b/Home Work/hw2-2cs.css
@@ -76,3 +76,6 @@ tr.image {
     text-align: "center";
     margin-right: auto;
     margin-left: auto; */
+
+
+/* <!-- "I, Prafful Jain, pledge my honor that I have neither recieved nor provided unauthorized assistance during the completion of this work " --> */
