--- a/Home Work/hw2-2cs.css
+++ b/Home Work/hw2-2cs.css
@@ -3,6 +3,7 @@ body {
     background-image: url(Images/beaver.jpg);
     background-repeat: repeat-x;
     background-position: bottom;
+    background-attachment: fixed;
 }
 
 table {
